e2e magic link auth integration

--- a/MindSense-AI-v1.0.0.xcodeproj/xcshareddata/xcschemes/MindSense-AI-v1.0.0.xcscheme
+++ b/MindSense-AI-v1.0.0.xcodeproj/xcshareddata/xcschemes/MindSense-AI-v1.0.0.xcscheme
@@ -105,6 +105,11 @@
             value = "/verify"
             isEnabled = "YES">
          </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "MINDSENSE_MAGIC_LINK_UNIVERSAL_HOST"
+            value = "mindsense-ai-app.vercel.app"
+            isEnabled = "YES">
+         </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
